--- a/application.yml
+++ b/application.yml
@@ -1,11 +1,9 @@
-server:
-  port: 8888
-spring:
-  application:
-    name: greeting-service
 management:
   endpoints:
     web:
       exposure:
         include:
-          - "*"
+          - '*'
+greeting-service:
+  greeting: "Hello"
+  default-value: "World
